// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test retrieval of the current theme 1`] = `
Object {
  "backgroundColor": "#ffffff",
  "borderColor": "#004358",
  "color": "#000000",
  "headerBackgroundColor": "#004358",
  "headerForegroundColor": "#ffffff",
  "headerHoverColor": "#ffe11a",
  "hoverColor": "#c0c0c0",
  "inputBorderColor": "#c0c0c0",
  "tooltipBackgroundColor": "gray",
  "tooltipForegroundColor": "white",
  "transitionDelay": "0.5s",
}
`;

exports[`Test retrieving a bad theme (doesn't exist) 1`] = `
Object {
  "backgroundColor": "#ffffff",
  "borderColor": "#004358",
  "color": "#000000",
  "headerBackgroundColor": "#004358",
  "headerForegroundColor": "#ffffff",
  "headerHoverColor": "#ffe11a",
  "hoverColor": "#c0c0c0",
  "inputBorderColor": "#c0c0c0",
  "tooltipBackgroundColor": "gray",
  "tooltipForegroundColor": "white",
  "transitionDelay": "0.5s",
}
`;

exports[`Test retrieving the dark theme 1`] = `
Object {
  "backgroundColor": "#000000",
  "borderColor": "#004358",
  "color": "#ffffff",
  "headerBackgroundColor": "#004358",
  "headerForegroundColor": "#ffffff",
  "headerHoverColor": "#ffe11a",
  "hoverColor": "#ffe11a",
  "inputBorderColor": "#c0c0c0",
  "tooltipBackgroundColor": "gray",
  "tooltipForegroundColor": "white",
  "transitionDelay": "0.5s",
}
`;

exports[`Test retrieving the light theme 1`] = `
Object {
  "backgroundColor": "#ffffff",
  "borderColor": "#004358",
  "color": "#000000",
  "headerBackgroundColor": "#004358",
  "headerForegroundColor": "#ffffff",
  "headerHoverColor": "#ffe11a",
  "hoverColor": "#ffe11a",
  "inputBorderColor": "#c0c0c0",
  "tooltipBackgroundColor": "gray",
  "tooltipForegroundColor": "white",
  "transitionDelay": "0.5s",
}
`;

exports[`Test setting and retrieving a custom theme 1`] = `
Object {
  "backgroundColor": "#ffffff",
  "borderColor": "#004358",
  "color": "#000000",
  "headerBackgroundColor": "#004358",
  "headerForegroundColor": "#ffffff",
  "headerHoverColor": "#ffe11a",
  "hoverColor": "#c0c0c0",
  "inputBorderColor": "#c0c0c0",
  "tooltipBackgroundColor": "gray",
  "tooltipForegroundColor": "white",
  "transitionDelay": "0.5s",
}
`;
